# libsolv

./: CMakeLists.txt  doit.sh
ext/: CMakeLists.txt  repo_arch.c
src/: CMakeLists.txt  order.c  repo_write.c  rules.c  selection.c  solver.c
tools/: CMakeLists.txt
